--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "nodemon": "^3.1.3"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "GrowRox",
   "license": "ISC"
