--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "node-geocoder": "^4.3.0",
     "razorpay": "^2.9.4"
   },
   "devDependencies": {
