--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "node-geocoder": "^4.3.0",
-    "razorpay": "^2.9.4"
+    "puppeteer": "^23.2.1",
+    "razorpay": "^2.9.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
